--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
+celery==5.3.4
 django==4.2.3
-django-session-timeout==0.1.0
+dj-database-url==2.0.0
+django-axes==6.0.5
 django-debug-toolbar==4.1.0
 django-jazzmin==2.6.0
-django-axes==6.0.5
-dj-database-url==2.0.0
-psycopg2-binary==2.9.6 
+django-session-timeout==0.1.0
 gunicorn==20.1.0
-Pillow==9.5.0
+pillow==9.5.0
 pip-chill==1.0.3
+psycopg2-binary==2.9.6
 python-dotenv==1.0.0
 whitenoise==6.5.0
